# Donna

./: .claudeignore  .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  DEMO_BUILD_PRIORITY.md  DEMO_DATASET.md  DEMO_SCRIPT.md  DEMO_SEED_DATA.json  DEMO_VIDEO_PLAN.md  Dockerfile  README.md  README_TECHNICAL.md  alembic.ini  chat_donna.py  config.py  demo_run.py  demo_scenarios.yaml  demo_seed.py  docker-compose.yml  donna.py  playwright_demo_runner.ts  primitives.md  production_audit.md  pyproject.toml  requirements.txt  stream_donna.py
.claude/: settings.json
.donna/: events.jsonl
api/: auth.py  cards.py  chat.py  composio_webhook.py  graph.py  main.py  onboarding.py  push.py  watches.py
backend/: config.py
dashboard/: CLAUDE.md  README.md
db/: inbound.py  migrations.py  models.py  session.py
delivery/: messages.py  session_window.py  whatsapp.py
docs/: API_CONTRACT.md  BUILD_PLAN_15_DAYS.md  COVERAGE.md  DONNA_FEATURES_AND_ROADMAP.md  FRONTEND_DELIVERY_SPEC.md  OPEN_QUESTIONS.md  PRE_TRIAL_CHECKLIST.md  PRODUCT.md  PUSH_SETUP.md  README.md  TRIAL_READINESS_STATUS.md  V2_ARCHITECTURE.md  YC_PITCH_BRIEF.md  codebase-mind-map.md  dashboard-research.md  dashboard-sprint-notes.md  deploy.md  deployment.md  donna-context-and-eval-playbook.md  memory.md  temporal-brief-implementation-results.md  temporal-memory-strategy-plans.md  timezone-audit.md
docs_v2/: BROWSER_CAPABILITY_ARCHITECTURE.md  CONTEXT_INTELLIGENCE_ARCHITECTURE.md  architecture_decision.md  cards_and_delivery.md  database_schema.md  domain_schema.md  donna-demo-v2.md  engines.md  (+11 more)
(+479 files in other folders)
