[project]
name = "donna"
version = "0.1.0"
description = "Donna runtime + memory backend (Claude Agent SDK)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "claude-agent-sdk",
    "langsmith>=0.4.37",
    "anthropic>=0.40.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "supermemory>=3.0.0",
    "graphiti-core[falkordb]>=0.28.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "backend/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["donna_runtime", "backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]
